Implemented segmentation and various fixes
- new "Segments" tab for painting FO4 segmentation.
- lowered default focus of mask brush by a bit.
- fixed bug where brush actions would happen even when no mesh was hit.
- cleaned up shader files.

--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -1279,8 +1279,17 @@ msgstr ""
 msgid "Extra Data"
 msgstr ""
 
-# XRC STRINGS END HERE
 msgid "Value"
+msgstr ""
+
+msgid "Segments"
+msgstr ""
+
+msgid "Apply"
+msgstr ""
+
+# XRC STRINGS END HERE
+msgid "SSF File"
 msgstr ""
 
 #: Anim.cpp:359
