--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 1.8.8\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -689,6 +689,12 @@ msgid "New Zap Slider"
 msgstr ""
 
 msgid "Create a new Zap slider based on unmasked vertices"
+msgstr ""
+
+msgid "Import OSD..."
+msgstr ""
+
+msgid "Imports OSD file and creates sliders for shapes with a matching name."
 msgstr ""
 
 msgid "Export OSD..."
@@ -2203,6 +2209,15 @@ msgstr ""
 
 #: OutfitStudio.cpp:2789 OutfitStudio.cpp:3175
 msgid "Failed to export OBJ file!"
+msgstr ""
+
+msgid "OSD Import"
+msgstr ""
+
+msgid "Import .osd file"
+msgstr ""
+
+msgid "Failed to import OSD file!"
 msgstr ""
 
 msgid "Export .osd file"
