Chinese translation update (#121)
* Chinese translation update

--- a/lang/zh/BodySlide.po
+++ b/lang/zh/BodySlide.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: BodySlide\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: S猫 <silent.haven@gmail.com>\n"
 "Language-Team: \n"
-"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.8\n"
 "X-Poedit-KeywordsList: _\n"
+"Last-Translator: S猫 <silent.haven@gmail.com>\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"Language: zh_CN\n"
 
 # XRC STRINGS START HERE
 msgid "Outfit/Body"
@@ -72,14 +72,12 @@ msgid "Batch Build..."
 msgstr "批量建立..."
 
 msgid "Build Morphs"
-msgstr "Build Morphs"
+msgstr "建立变形"
 
 msgid ""
 "Builds a morphs (.tri) file alongside the meshes for accessing the sliders "
 "in-game. Requires other mods to make use of the morph data."
-msgstr ""
-"Builds a morphs (.tri) file alongside the meshes for accessing the sliders "
-"in-game. Requires other mods to make use of the morph data."
+msgstr "建立一个变形(.tri)文件来在游戏中访问滑块。需要其他mod来利用变形数据。"
 
 msgid "Show a preview window for this outfit."
 msgstr "显示这件装备的预览窗口。"
@@ -1358,10 +1356,10 @@ msgid "Shape Properties"
 msgstr "模型属性"
 
 msgid "Material"
-msgstr "材料"
+msgstr "材质"
 
 msgid "Choose material file"
-msgstr "选择材料文件"
+msgstr "选择材质文件"
 
 msgid "Shader"
 msgstr "着色器"
@@ -2422,7 +2420,7 @@ msgid "Failed to import OSD file!"
 msgstr "导入OSD文件失败！"
 
 msgid "Export .osd file"
-msgstr "导出.osd文件。"
+msgstr "导出.osd文件"
 
 msgid "Failed to export OSD file!"
 msgstr "导出OSD文件失败！"
@@ -2638,31 +2636,3 @@ msgstr "载入滑块文件..."
 #: PreviewWindow.cpp:63
 msgid "Preview failed: OpenGL context is not OK."
 msgstr "装备工作室：OpenGL环境不正常。"
-
-#~ msgid "Update Bounding Sphere"
-#~ msgstr "更新边界范围"
-
-#~ msgid ""
-#~ "Updates the bounding sphere of the geometry with a new position and "
-#~ "radius."
-#~ msgstr "以一个新的位置和半径更新几何边界范围。"
-
-#~ msgid ""
-#~ "Failed to create TRI file in the following location\n"
-#~ "\n"
-#~ "%s"
-#~ msgstr ""
-#~ "未能创建TRI文件到以下位置\n"
-#~ "\n"
-#~ "%s"
-
-#~ msgid "RaceMenu Morphs"
-#~ msgstr "RaceMenu变化"
-
-#~ msgid ""
-#~ "Builds a morphs (.tri) file alongside the meshes for accessing the "
-#~ "sliders in-game. Requires the RaceMenu mod and matching plugin/scripts "
-#~ "for the collection of sliders."
-#~ msgstr ""
-#~ "建立一个变形(.tri)文件来在游戏中访问滑块。需要RaceMenu和配套的插件/脚本来"
-#~ "采集滑块。"
