Implemented skin partitions tab (+fixes)
- New "Partitions" tab that lets you add, delete and edit skin
partitions (FO3NV/SK).
- Removed "Build Skin Partitions" and have that done with the "Skinned"
checkbox instead.
- "Apply" on partitions takes the vertex, triangle and flags data from
the UI and assigns them to the NISKI and BSDSKI.
- "Update Skin Partition" updates the bone and weighting maps and
inserts additional partitions as needed.
- Fixed string optimization issue with some block types that could
potentially break the NIF.
- Fixed bug with segments that had more than 65535 triangles.
- Translation file update.

--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -616,12 +616,6 @@ msgstr ""
 msgid "Masks vertices with bone weights, so you can manually assign weights to unweighted vertices."
 msgstr ""
 
-msgid "Build Skin Partitions"
-msgstr ""
-
-msgid "Creates or rebuilds skin partitions for the current shape. This is typically not needed, use only if skin partitions are broken."
-msgstr ""
-
 msgid "Delete\tDel"
 msgstr ""
 
@@ -1300,8 +1294,23 @@ msgstr ""
 msgid "Apply"
 msgstr ""
 
-# XRC STRINGS END HERE
 msgid "SSF File"
+msgstr ""
+
+msgid "Partitions"
+msgstr ""
+
+msgid "Add Partition..."
+msgstr ""
+
+msgid "Adds a new partition to the shape."
+msgstr ""
+
+msgid "Delete Partition..."
+msgstr ""
+
+# XRC STRINGS END HERE
+msgid "Deletes the partition from the shape."
 msgstr ""
 
 #: Anim.cpp:359
