--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 1.8.9\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -1318,8 +1318,11 @@ msgstr ""
 msgid "Invert U"
 msgstr ""
 
-# XRC STRINGS END HERE
 msgid "Invert V"
+msgstr ""
+
+# XRC STRINGS END HERE
+msgid "Toggle Zaps:"
 msgstr ""
 
 #: Anim.cpp:359
