--- a/lang/zh/BodySlide.po
+++ b/lang/zh/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 1.8.9\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
@@ -1427,9 +1427,12 @@ msgstr "FBX Import Options..."
 msgid "Invert U"
 msgstr "Invert U"
 
-# XRC STRINGS END HERE
 msgid "Invert V"
 msgstr "Invert V"
+
+# XRC STRINGS END HERE
+msgid "Toggle Zaps:"
+msgstr "Toggle Zaps:"
 
 #: Anim.cpp:359
 msgid ""
