--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -349,7 +349,12 @@ msgstr ""
 msgid "Load a NIF file as the working outfit, replacing any current outfit objects."
 msgstr ""
 
-msgid "Apply Overall Skin Transform"
+msgid "Apply Skin Transforms"
+msgstr ""
+
+msgid ""
+"There are skin transforms in the shapes that could cause misalignment.\n"
+"Do you want to apply them to the geometry?"
 msgstr ""
 
 msgid "Disable for a different way of loading NIF files to see if that puts it into the right (or a better) spot."
