--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.9\n"
+"X-Generator: Poedit 1.8.11\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -2122,4 +2122,10 @@ msgid "Loading slider file..."
 msgstr ""
 
 msgid "Preview failed: OpenGL context is not OK."
+msgstr ""
+
+msgid "Version"
+msgstr ""
+
+msgid "Version of NIF file '%s' doesn't match current target game. To use the meshes for the target game, export to OBJ/FBX and reload them again."
 msgstr ""
