Added UV sliders/zaps
Diffs are created via OBJ import after a slider was set to UV mode. Can
be both sliders and zaps (checkboxes).

--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -1313,8 +1313,8 @@ msgstr "Hoch"
 msgid "Options"
 msgstr "Optionen"
 
-msgid "Invert Slider"
-msgstr "Slider umkehren"
+msgid "Invert"
+msgstr "Invertieren"
 
 msgid "Hidden"
 msgstr "Versteckt"
